--- a/.config/i3/bar.conf
+++ b/.config/i3/bar.conf
@@ -12,8 +12,9 @@ client.background       #ffffff
 bar {
         font pango:JetBrainsMono Nerd Font 11
         status_command ~/.local/bin/bumblebee-status \
-			-m kernel apt date time \
-			-t nord-colorful
+			-m kernel memory apt date time \
+			-t nord-colorful \
+			-p interval=1
 		position top
 		workspace_min_width 28
 	colors {
