--- a/.config/i3/bar.conf
+++ b/.config/i3/bar.conf
@@ -12,7 +12,7 @@ client.background       #ffffff
 bar {
         font pango:JetBrainsMono Nerd Font 11
         status_command ~/.local/bin/bumblebee-status \
-			-m nic apt date time \
+			-m nic apt date weather time \
 			-t nord-colorful \
 			-p interval=1
 		position top
