--- a/.config/i3/bar.conf
+++ b/.config/i3/bar.conf
@@ -12,11 +12,11 @@ client.background       #ffffff
 bar {
         font pango:JetBrainsMono Nerd Font 11
         status_command ~/.local/bin/bumblebee-status \
-			-m nic apt date weather time \
+			-m nic apt date weather time sun \
 			-t nord-colorful \
 			-p interval=1
 		position top
-		workspace_min_width 28
+		workspace_min_width 27
 	colors {
     background #002b36
     statusline #002b36
