--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,3 +11,7 @@ floating_modifier $mod
 new_window 1pixel
 gaps inner 8
 gaps outer 4
+
+assign [class="Firefox"] 1
+assign [class="kitty"] 2
+assign [class="Pcmanfm"] 3
