--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -89,3 +89,69 @@ color14 #89DCEB
 #: white
 color7  #D9E0EE
 color15 #D9E0EE
+# ---------------------------------------------------------
+# Which edge to show the tab bar on, top or bottom
+tab_bar_edge top
+
+# The tab bar style, can be one of  fade or separator.
+tab_bar_style separator
+
+# The separator between tabs in the tab bar
+tab_separator "｜"
+# ---------------------------------------------------------
+# Hotkeys
+# ---------------------------------------------------------
+clear_all_shortcuts yes
+
+# Copy paste consistent with other programs
+map ctrl+shift+c  no_op
+map ctrl+c  copy_to_clipboard
+map ctrl+v  paste_from_clipboard
+
+# Send SIGINT (Ctrl+C) on ctrl+shift+c  (see https://developer.run/36)
+map ctrl+shift+c send_text all \x03
+
+# F1, F3 to open current screen in editor (Sublime Text)
+map f1 pipe @text overlay bash -c "tail -n 500 | tee /tmp/shell_contents && subl /tmp/shell_contents" 
+map f3 pipe @text overlay bash -c "tee /tmp/shell_contents && subl /tmp/shell_contents" 
+
+# Hotkeys: tabs/windows
+map ctrl+` new_window_with_cwd
+map ctrl+f4 close_window
+map super+tab next_window
+map alt+enter move_window_to_top
+map ctrl+tab next_tab
+map ctrl+t      new_tab !neighbor
+
+map alt+right   move_tab_forward
+map alt+left    move_tab_backward
+map f2 set_tab_title
+map shift+f6 set_tab_title
+
+map ctrl+1 goto_tab 1
+map ctrl+2 goto_tab 2
+map ctrl+3 goto_tab 3
+map ctrl+4 goto_tab 4
+map ctrl+5 goto_tab 5
+map ctrl+6 goto_tab 6
+map ctrl+7 goto_tab 7
+map ctrl+8 goto_tab 8
+map ctrl+9 goto_tab 9
+
+# Hotkeys: layout management
+map alt+` next_layout
+
+# Hotkeys: font size
+map ctrl+equal     change_font_size all +2.0
+map ctrl+minus     change_font_size all -2.0
+map ctrl+0 change_font_size all 0
+
+# Clear screen (universal, will work over ssh, python etc)
+map ctrl+l send_text '\E[H\E[3J'
+
+# No nagging about updates
+update_check_interval 0
+# ---------------------------------------------------------
+map f1 launch --type=tab sh -c "btop"
+# ---------------------------------------------------------
+
