--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -152,6 +152,7 @@ map ctrl+l send_text '\E[H\E[3J'
 # No nagging about updates
 update_check_interval 0
 # ---------------------------------------------------------
-map f1 launch --type=tab sh -c "btop"
+map f1 launch --type=tab sh -c "mc"
+map f2 launch --type=tab sh -c "btop"
 # ---------------------------------------------------------
 
