--- a/.config/i3/bar.conf
+++ b/.config/i3/bar.conf
@@ -1,6 +1,7 @@
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+#########################################################################################################
+# Start i3bar to display a workspace bar (plus the system information i3status finds out, if available)
 # class                 border  backgr. text    indicator child_border
+
 client.focused          #E06C75 #E06C75 #1a1826 #E06C75   #E06C75
 client.focused_inactive #5f676a #5f676a #ffffff #484e50   #5f676a
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
@@ -10,22 +11,16 @@ client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
 client.background       #ffffff
 
 bar {
-        font pango:JetBrainsMono Nerd Font 11
-        status_command ~/.local/bin/bumblebee-status \
-			-m nic apt date weather time sun \
-			-t nord-colorful \
-			-p interval=1
-		position top
-		workspace_min_width 27
-	colors {
-    background #002b36
-    statusline #002b36
-    separator  #666666
-
-    focused_workspace  #E06C75 #E06C75 #1a1826
-    active_workspace   #333333 #5f676a #FFFFFF
-    inactive_workspace #333333 #222222 #888888
-    urgent_workspace   #cc241d #900000 #FFFFFF
-    binding_mode       #cc241d #900000 #FFFFFF
-  }
+	font pango:JetBrainsMono Nerd Font 11
+    colors {
+        background #1e1e1e
+        statusline #ffffff
+        separator  #1e1e1e
+        focused_workspace  #008fff #007fff #ffffff
+        active_workspace   #333333 #5f676a #ffffff
+        inactive_workspace #333333 #222222 #888888
+        urgent_workspace   #aa0000 #990000 #ffffff
+    }
+    position top
+    status_command ~/.config/i3/conky-i3bar.sh
 }
